logs/openbayes.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/OpenBayes'...
Compiling './lib/python3.5/site-packages/OpenBayes/bayesnet.py'...
***   File "./lib/python3.5/site-packages/OpenBayes/bayesnet.py", line 267
    print G
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/OpenBayes/delegate.py'...
***   File "./lib/python3.5/site-packages/OpenBayes/delegate.py", line 101
    print 'base'
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/OpenBayes/distributions.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (distributions.py, line 311)
Compiling './lib/python3.5/site-packages/OpenBayes/graph.py'...
***   File "./lib/python3.5/site-packages/OpenBayes/graph.py", line 583
    print G
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/OpenBayes/inference.py'...
***   File "./lib/python3.5/site-packages/OpenBayes/inference.py", line 558
    print evidence
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/OpenBayes/potentials.py'...
***   File "./lib/python3.5/site-packages/OpenBayes/potentials.py", line 153
    print string
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/OpenBayes-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
